--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,6 @@
+/src/serviceWorker.js
+/public/pdf.worker.js
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -22,3 +25,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+debug.log*
+
