--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,12 @@
     "react/function-component-definition": [
       2,
       { "namedComponents": "function-declaration" }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   }
 }
